Fix horizontal scrollbar

--- a/dubtrack/chat/right.css
+++ b/dubtrack/chat/right.css
@@ -15,5 +15,5 @@
 
 
 #main-room{
-    max-width: 100vw;
+    max-width: 100%;
 }
